<resources>
    <string name="app_name">SeminarioEntregable</string>

    <string name="welcome_text">Welcome to The Movie Database</string>
    <string name="go_to_popular_movies_text">Go to popular movies</string>

    <string name="popular_movies_button">Popular movies</string>

    <string name="search_movie_text">Search for a movie</string>
    <string name="enter_a_movie_name_input">Enter a movie name</string>
    <string name="search_movie_button">Search</string>

    <string name="error_message">An error occurred, try again</string>
    <string name="error_no_results_found">No results found for the search</string>
    <string name="no_internet_connection">No internet conection</string>
    <string name="no_similar_movies">No similar movies found</string>

    <string name="home">Home</string>
    <string name="popular_movies">Popular</string>
    <string name="trending_movies">Trending</string>
    <string name="wishlist">Wishlist</string>

    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="remove_from_wishlist">Remove</string>
    <string name="movie_added_to_wishlist">Movie added to wishlist</string>
    <string name="similar_movies">Similar movies that may like you</string>
    <string name="share">Share</string>
    <string name="homepage">Movie homepage</string>

    <string name="popular_movies_title">These are the most popular movies right now</string>
    <string name="trending_movies_title">These are the trending movies this week</string>
    <string name="wishlist_title">These are your favorite movies</string>
</resources>